--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
         "ip_address": "192.168.4.127",
         "username": "moxa",
         "password": "moxa",
-		"ssh_port": 22
+	"ssh_port": 22
 	},
 		
     "directory": {	
@@ -18,19 +18,17 @@
 	"linux":{
 	    "command": ["sudo dpkg -i teamviewer-iot-agent-armv7_2.12.15_armhf.deb"], 			
 	    "commandPost": ["rm *.deb"], 
-		"commandPost1": [] 
+	    "commandPost1": [] 
     },
 
 	"options":{
 	    "install_time": 3,
-		"retry_count": 5,
-		"enable_installation": true,
-		"enable_post_installation":true,
-		"enable_checker": true,
-		"tv_remote_assignment": ["sudo teamviewer-iot-agent assign -t <token> --accept-license"],
-		"tv_set_properties":["sudo teamviewer-iot-agent configure set FileTransferAccessControl 1",
-							"sudo teamviewer-iot-agent stop", "sudo teamviewer-iot-agent start"
-							]
-								 
+	    "retry_count": 5,
+	    "enable_installation": true,
+            "enable_post_installation":true,
+	    "enable_checker": true,
+	    "tv_remote_assignment": ["sudo teamviewer-iot-agent assign -t <token> --accept-license"],
+	    "tv_set_properties":["sudo teamviewer-iot-agent configure set FileTransferAccessControl 1",
+	    "sudo teamviewer-iot-agent stop", "sudo teamviewer-iot-agent start"]
 	}		  
 }
