--- a/config-tv-install.json
+++ b/config-tv-install.json
@@ -1,6 +1,6 @@
 {
     "general":{
-        "ip_address": "192.168.4.127",
+        "ip_address": "192.168.137.43",
         "username": "moxa",
         "password": "moxa",
 	"ssh_port": 22
@@ -8,7 +8,7 @@
 		
     "directory": {	
 		"remote_dir": "/home/moxa/",
-		"local_dir": "C:/Python3/Starter_kit/Installation-script-v1.0.0/copyToAndFromUC/",
+		"local_dir": "C:/MTC/moxaiiot-installation-script/copyToAndFromUC/",
 		"download_files": [],
 		"download_all": false,
 		"upload_files": ["teamviewer-iot-agent-armv7_2.12.15_armhf.deb"],
@@ -27,8 +27,7 @@
 		"enable_installation": true,
 		"enable_post_installation":true,
 		"enable_checker": false,
-		"tv_remote_assignment": ["sudo teamviewer-iot-agent assign -t <token> --accept-license"],
-		"tv_set_properties":["sudo teamviewer-iot-agent configure set FileTransferAccessControl 1",
-		"sudo teamviewer-iot-agent stop", "sudo teamviewer-iot-agent start"]
+		"tv_remote_assignment": [],
+		"tv_set_properties": []
 	}		  
 }
